fix section title overflow bug

--- a/src/styles/section-list.scss
+++ b/src/styles/section-list.scss
@@ -59,6 +59,7 @@
       flex: 1;
       display: flex;
       flex-direction: row;
+      max-width: 100%;
     }
 
     $buttons-container-width: 40px;
